# miniture-

./: CMakeLists.txt  main.cpp
01_allocators/: allocator.h  memory.h  uninitalized.h  util.h
02_iterators/: iterator.h
03_algorithms/: algo.h  algobase.h  functional.h  heap_algo.h
_test/: a.out  adjacent_find.cpp  copy_test.cpp  min_test.cpp  search_test.cpp  test.cpp
include/01_allocators/: construct.h  uninitalized.h
include/03_algorithms/: heap_algo.h
include/04_containers/: basic_string.hpp  deque.hpp  queue.hpp
src/00_utils/: exceptdef.h
src/01_allocators/: type_traits.h
src/02_iterators/: iterator.h
src/03_algorithms/: algo.h
src/04_containers/: basic_string.hpp
src/_test/: copy_backward_test.cpp  copy_n_test.cpp  find_first_of.cpp  iter_swap_test.cpp  max_test.cpp  search_n_test.cpp
test/: CMakeLists.txt
